testbed/test/cruise/compiler/expected/Mismatched_Brackets_Method.txt
Mismatched_Brackets_Method.ump:7: error: illegal start of expression
            if (i % 2)) {
                      ^
1 error